gcc/testsuite/rust/rustc/ui/impl-trait/recursive-impl-trait-type-direct.rs
// Test that an `impl Trait` type that expands to itself is an error.

#![allow(unconditional_recursion)]

fn test() -> impl Sized {
// { dg-error ".E0720." "" { target *-*-* } .-1 }
    test()
}

fn main() {}

